--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -335,8 +335,14 @@ header + main + footer {
      .Kontakt {
         margin-top: 300px; /* Abstand zum Header*/
     }
+    .contact-form-container {
+        width: 360px;
+        max-width: 90%;
+        padding: 0;
+        margin:0;
+    }
     fieldset {
-        width: 90%;
-        max-width: 360px;
+        width: 360px;
+        max-width: 90%;
     }
 }
